# litepb

./: .clang-format  .dockerignore  .github_sync_filter  .gitignore  .replit  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  final_test_fix.py  fix_all_rpc_tests.py  fix_broken_tests.py  fix_rpc_tests.py  library.json  litepb_gen  platformio.ini  pyproject.toml  replit.md  run_generator.py  src  test_glob.ini  test_import.py
.github/actions/setup-dev/: action.yml
.github/workflows/: build-docker.yml  ci.yml
attached_assets/: 1_Set up job_1759588453065.txt  Pasted--Run-test-interop-run-tests-sh-test-interop-run-tests-sh-shell-usr-bin-bash-e-0-env--1759586556054_1759586556054.txt  Pasted--test-interop-run-tests-sh-System-Protobuf-not-found-downloading-via-CPM-CPM-Adding-packag-1759571124843_1759571124844.txt  Pasted-2025-10-05T20-31-05-9443180Z-Current-runner-version-2-328-0-2025-10-05T20-31-05-9447859Z-Runner-n-1759696472434_1759696472434.txt  Pasted-Run-test-interop-run-tests-sh-Using-Nix-protobuf-at-usr-The-C-compiler-identification-is-GNU--1759583331849_1759583331849.txt
cmake/: CMakeLists.txt  LitePBConfig.cmake.in
cpp/include/litepb/: litepb.h  well_known_types.h  well_known_types_serializers.h
cpp/include/litepb/core/: proto_reader.h  proto_writer.h  streams.h  unknown_fields.h
cpp/include/litepb/rpc/: addressing.h  channel.h  error.h  framing.h  transport.h
cpp/src/litepb/core/: proto_reader.cpp  proto_writer.cpp  unknown_fields.cpp
cpp/src/litepb/rpc/: channel.cpp  framing.cpp
docker/: Dockerfile
docs/: API.md  RPC.md  rpc.md
examples/cpp/cmake/all_types/: CMakeLists.txt  README.md
examples/cpp/cmake/basic_serialization/: CMakeLists.txt  README.md
examples/cpp/cmake/basic_serialization/src/: main.cpp
examples/cpp/platformio/serialization/all_types/: README.md  platformio.ini
examples/cpp/platformio/serialization/basic/: platformio.ini
examples/cpp/rpc/litepb_rpc/: README.md  platformio.ini
examples/cpp/rpc/litepb_rpc/include/: loopback_transport.h  platform_time.h  sensor_simulator.h  tcp_transport.h  uart_transport.h  udp_transport.h
examples/cpp/rpc/litepb_rpc/proto/: sensor.proto  switch.proto
examples/cpp/rpc/litepb_rpc/src/: main.cpp  sensor.cpp  sensor.h  switch.cpp  switch.h
examples/cpp/rpc/litepb_rpc/test/: unity_config.h
examples/cpp/serialization/all_types/: README.md  platformio.ini
examples/cpp/serialization/basic/: README.md  platformio.ini
examples/rpc/litepb_rpc/: README.md  platformio.ini
examples/rpc/litepb_rpc/include/: loopback_transport.h  sensor_simulator.h  tcp_transport.h  uart_transport.h  udp_transport.h
examples/rpc/litepb_rpc/proto/: switch.proto
examples/rpc/litepb_rpc/proto/litepb/: rpc_options.proto
examples/rpc/litepb_rpc/src/: main.cpp  sensor.cpp  sensor.h  switch.cpp
examples/serialization/all_types/: platformio.ini
examples/serialization/all_types/proto/: showcase.proto
examples/serialization/basic/: platformio.ini
generator/: __init__.py  cpp_generator.py  litepb_gen  litepb_gen.py  proto_parser.py  requirements.txt  rpc_options.py  type_mapper.py
generator/backends/: base.py
generator/backends/cpp/: cpp_utils.py  field_utils.py  generator.py  message_codegen.py  models.py  serialization_codegen.py  type_mapper.py
generator/backends/cpp/templates/: header.j2  source.j2
generator/core/: proto_parser.py  rpc_options.py
generator/rpc/: base.py
generator/rpc/litepb/: generator.py
generator/rpc/litepb/templates/: service.j2
include/litepb/: litepb.h
include/litepb/core/: streams.h
include/litepb/rpc/: channel.h  error.h  framing.h  transport.h
proto/: rpc.proto  scalar_types.proto  simple.proto
proto/litepb/: rpc_options.proto  rpc_protocol.proto
proto/test/: rpc_test.proto
scripts/: build_and_run.sh  clean_build.sh  clean_build_dirs.sh  coverage.sh  format.sh  format_check.sh  gcov-wrapper.sh  generate_all_tests.sh  git_squash_history.sh  platformio_generator.py  protoc_generator.py  run_cmake_examples.sh  run_coverage_tests.sh  run_examples_tests.sh  run_interop_tests.sh  run_platformio_examples.sh  run_platformio_tests.sh  test_workflows.sh  update_version.sh
scripts/dev/: git_squash_history.sh  github_sync_initial.sh  github_sync_to_public.sh
scripts/lib/: common.sh
src/litepb/core/: proto_reader.cpp
src/litepb/rpc/: channel.cpp  framing.cpp
tests/cpp/interop/: CMakeLists.txt  interop.cpp  minimal_test  minimal_test.cpp  protoc_helpers.cpp  protoc_helpers.h  simple_test  simple_test.cpp  single_test.cpp  test_both.cpp  test_namespace  test_namespace.cpp  test_namespace_fix  test_namespace_fix.cpp  test_runner.cpp  test_vectors.proto
tests/cpp/platformio/: tests_main.cpp  unity_config.h
tests/cpp/platformio/core/test_proto_reader/: proto_reader.cpp
tests/cpp/platformio/core/test_streams/: streams.cpp
tests/cpp/platformio/core/test_unknown_fields/: unknown_fields.cpp
tests/cpp/platformio/rpc/test_core/: rpc_core.cpp
tests/cpp/platformio/rpc/test_error_propagation/: error_propagation.cpp
tests/interop/: CMakeLists.txt  protoc_helpers.cpp  protoc_helpers.h  run_tests.sh  test_vectors.proto  test_vectors_protoc.proto
tests/platformio/: unity_config.h
tests/platformio/core/test_proto_writer/: proto_writer.cpp
tests/platformio/core/test_streams/: streams.cpp
tests/platformio/proto/test_packages/: rpc.cpp
tests/platformio/proto/test_repeated_fields/: repeated_fields.cpp
tests/platformio/rpc/test_core/: rpc_core.cpp
tests/platformio/rpc/test_error_propagation/: error_propagation.cpp
tests/platformio/rpc/test_integration/: rpc_integration.cpp
tests/platformio/serialization/test_enums/: enums.cpp
tests/platformio/serialization/test_map_types/: map_types.cpp
tests/platformio/serialization/test_scalar_types/: scalar_types.cpp
tests/platformio/serialization/test_simple/: simple.cpp
tests/proto/rpc/: rpc.proto
tests/proto/serialization/: enums.proto  map_types.proto  nested_messages.proto  oneof_fields.proto  proto2_features.proto  proto3_features.proto  repeated_fields.proto  well_known_types.proto
(+17 files in other folders)
